--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -108,7 +108,7 @@
       {
         "id": "accessibility",
         "name": "Accessibility",
-        "description": "Adhere to <acronym_tag>WCAG</acronym_tag> principles, add relevant ARIA attributes to improve accessibility"
+        "description": "Adhere to <acronym_tag>WCAG</acronym_tag> principles, add relevant ARIA attributes to improve accessibility."
       },
       {
         "id": "schema-markup",
