--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -84,98 +84,94 @@
   },
   "skills": {
     "title": "Habilidades",
-    "items": [
-      {
-        "id": "react",
+    "items": {
+      "react": {
         "name": "React",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "css-in-js",
+      "css-in-js": {
         "name": "CSS-in-JS",
         "description": "Principalmente Styled components, pero también he utilizado Emotion CSS y bibliotecas como <external_anchor_tag>Styled System</external_anchor_tag>(https://styled-system.com/)."
       },
-      {
-        "id": "redux",
+      "redux": {
         "name": "Redux",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "typescript",
+      "typescript": {
         "name": "TypeScript",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "accessibility",
+      "accessibility": {
         "name": "Accesibilidad",
         "description": "Seguir los principios de <acronym_tag>WCAG</acronym_tag>, agregar atributos ARIA relevantes para mejorar la accesibilidad."
       },
-      {
-        "id": "schema-markup",
+      "schema-markup": {
         "name": "Schema markup",
         "description": "Utilizar datos estructurados en elementos aplicables para mejorar los resultados en los motores de búsqueda al hacer que el contenido sea más comprensible."
       },
-      {
-        "id": "html",
+      "html": {
         "name": "HTML5",
         "description": "Utilizar elementos semánticos."
       },
-      {
-        "id": "css",
+      "css": {
         "name": "CSS3",
         "description": "Utilizar técnicas modernas de CSS para estilizar páginas web y aplicaciones."
       },
-      {
-        "id": "sass",
+      "sass": {
         "name": "SASS",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "javascript",
+      "javascript": {
         "name": "JavaScript (ES6+)",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "git",
+      "git": {
         "name": "Git",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "npm",
+      "npm": {
         "name": "NPM",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "slack",
+      "slack": {
         "name": "Slack",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "jira",
+      "jira": {
         "name": "JIRA",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "node",
+      "node": {
         "name": "Node.js",
         "description": "Lorem_ipsum_dolor"
       },
-      {
-        "id": "express",
+      "express": {
         "name": "Express.js",
         "description": "Lorem_ipsum_dolor"
+      },
+      "postman": {
+        "name": "Postman",
+        "description": "Lorem_ipsum_dolor"
+      },
+      "postgres": {
+        "name": "Postgres",
+        "description": "Lorem_ipsum_dolor"
+      },
+      "mongodb": {
+        "name": "MongoDB",
+        "description": "Lorem_ipsum_dolor"
       }
-    ],
+    },
     "proficiencyDescription": {
-      "beginner": "I'm familiar with these technologies, mainly following tutorials and courses, since I wanted to learn more about them.",
-      "medium": "I've used these technologies in personal projects, not professionally, but I'm confident that I can solve issues I might encounter with them.",
-      "advanced": "I've either used these technologies professionally (in a freelance project or a full-time job) or I'm fairly familiar with them."
+      "beginner": "Aunque no es mi enfoque principal, estoy familiarizada con estas tecnologías, principalmente siguiendo tutoriales y cursos que he adquirido, ya que quería aprender más sobre ellas.",
+      "medium": "Estoy muy interesada en estas tecnologías y las utilizo activamente en proyectos personales. Confío en que puedo resolver problemas que pueda encontrar con ellas.",
+      "advanced": "He utilizado estas tecnologías profesionalmente, ya sea en proyectos freelance o en un trabajo de tiempo completo."
     }
   },
   "languages": {
     "title": "Idiomas",
     "description": "Conozco los siguientes idiomas:",
-    "items": "Español (Nativo), Inglés (Avanzado)",
+    "items": "Español (Natal), Inglés (Avanzado)",
     "note": "Actualmente estoy estudiando japonés y francés, y como estudiante de idiomas, me interesa mucho la <abbreviation_tag>i18n</abbreviation_tag> (internacionalización) y cómo los diferentes idiomas impactan el diseño y la experiencia de usuario en una aplicación."
   },
   "contact": {
