--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -37,40 +37,22 @@
     "description": "<bold_tag>Coming soon</bold_tag>. In the meantime, you can take a look at this <external_anchor_tag>portfolio's repo</external_anchor_tag> on GitHub, to get an idea of how I like to work on my projects.",
     "items": [
       {
+        "id": "000",
+        "title": "Portfolio",
+        "subtitle": "React Application",
+        "description": "<bold_tag>Coming soon</bold_tag>. In the meantime, you can take a look at this <external_anchor_tag>portfolio's repo</external_anchor_tag> on GitHub, to get an idea of how I like to work on my projects."
+      },
+      {
         "id": "001",
         "title": "100 Poems (WIP)",
         "subtitle": "React Application",
-        "description": "An application to view the poems from the famous Japanese anthology \"Hyakunin Isshu\" (百人一首) that saves your viewing preferences on the local storage.",
-        "image": {
-          "thumbnail": "/images/twirly-whiskers-thumb.jpg",
-          "full": "/images/twirly-whiskers.jpg"
-        },
-        "url": {
-          "code": "https://github.com/lifeanddoodles/hundred-poems/",
-          "live": "https://lifeanddoodles.github.io/hundred-poems/"
-        },
-        "client": null,
-        "creativeItemType": "WebSite",
-        "technologies": ["React", "HTML", "CSS"],
-        "tags": ["App Development", "Web Development"]
+        "description": "An application to view the poems from the famous Japanese anthology \"Hyakunin Isshu\" (百人一首) that saves your viewing preferences on the local storage."
       },
       {
         "id": "002",
         "title": "Fullstack",
         "subtitle": "React Fullstack Application",
-        "description": "Lorem ipsum dolor",
-        "image": {
-          "thumbnail": "/images/twirly-whiskers-thumb.jpg",
-          "full": "/images/twirly-whiskers.jpg"
-        },
-        "url": {
-          "code": "https://github.com/lifeanddoodles/hundred-poems/",
-          "live": "https://lifeanddoodles.github.io/hundred-poems/"
-        },
-        "client": null,
-        "creativeItemType": "WebSite",
-        "technologies": ["React", "HTML", "CSS"],
-        "tags": ["App Development", "Web Development"]
+        "description": "Lorem ipsum dolor"
       }
     ],
     "callsToAction": {
