Implement select to change language

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -23,8 +23,8 @@
     }
   },
   "languageSwitcher": {
-    "en": "English",
-    "es": "Español"
+    "label": "Change language",
+    "options": { "en": "English", "es": "Español" }
   },
   "hero": {
     "title": "Hi, I'm <span_tag>Sandra Vargas</span_tag>",
