--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,30 +1,32 @@
 {
   "skipToContent": "Skip to content",
-  "navMenu": {
-    "home": {
-      "label": "Sandra Vargas",
-      "url": "/"
+  "header": {
+    "navMenu": {
+      "home": {
+        "label": "Sandra Vargas",
+        "url": "/"
+      },
+      "projects": {
+        "label": "Projects",
+        "url": "#projects"
+      },
+      "about": {
+        "label": "About",
+        "url": "#about"
+      },
+      "skills": {
+        "label": "Skills",
+        "url": "#skills"
+      },
+      "contact": {
+        "label": "Contact",
+        "url": "#contact"
+      }
     },
-    "projects": {
-      "label": "Projects",
-      "url": "#projects"
-    },
-    "about": {
-      "label": "About",
-      "url": "#about"
-    },
-    "skills": {
-      "label": "Skills",
-      "url": "#skills"
-    },
-    "contact": {
-      "label": "Contact",
-      "url": "#contact"
+    "languageSwitcher": {
+      "label": "Change language",
+      "options": { "en": "English", "es": "Español" }
     }
-  },
-  "languageSwitcher": {
-    "label": "Change language",
-    "options": { "en": "English", "es": "Español" }
   },
   "hero": {
     "title": "Hi, I'm <span_tag>Sandra Vargas</span_tag>",
