--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -1,30 +1,32 @@
 {
   "skipToContent": "Ir al contenido",
-  "navMenu": {
-    "home": {
-      "label": "Sandra Vargas",
-      "url": "/"
+  "header": {
+    "navMenu": {
+      "home": {
+        "label": "Sandra Vargas",
+        "url": "/"
+      },
+      "projects": {
+        "label": "Proyectos",
+        "url": "#projects"
+      },
+      "about": {
+        "label": "Acerca de",
+        "url": "#about"
+      },
+      "skills": {
+        "label": "Habilidades",
+        "url": "#skills"
+      },
+      "contact": {
+        "label": "Contacto",
+        "url": "#contact"
+      }
     },
-    "projects": {
-      "label": "Proyectos",
-      "url": "#projects"
-    },
-    "about": {
-      "label": "Acerca de",
-      "url": "#about"
-    },
-    "skills": {
-      "label": "Habilidades",
-      "url": "#skills"
-    },
-    "contact": {
-      "label": "Contacto",
-      "url": "#contact"
+    "languageSwitcher": {
+      "label": "Cambiar idioma",
+      "options": { "en": "English", "es": "Español" }
     }
-  },
-  "languageSwitcher": {
-    "label": "Cambiar idioma",
-    "options": { "en": "English", "es": "Español" }
   },
   "hero": {
     "title": "Hola, soy <span_tag>Sandra Vargas</span_tag>",
